# PockLigGPT

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  vars_reward.json
config/docking/: vars_meeko.json  vars_mgltools.json
config/rl/: cross.yaml  sequence.yaml  sequence_add.yaml
config/tokenization/: chembl.yaml  crossdocked.yaml  zinc20.yaml  zink20.yaml
config/training/: fine_tune_cata.py  fine_tune_chembl.py  fine_tune_cross_docked.py  fine_tune_cross_docked_no_chembl.py  train_very_big_molecules_selfies.py
config/training/finetune_1/: chembl_sequence.yaml
config/training/finetune_2/: crossdocked_cross.yaml  (+2 more)
datasets/: README.md
datasets/processed/: README.md
datasets/raw/: README.md
datasets/tokenizer/: README.md  meta_chembl_db_aa_2_proto4.pkl
experiments/: README.md
notebooks/: prott5_pocket_pipeline_simple_en.ipynb
pockliggpt/models/: model_cross_attention.py  model_sequence.py
pockliggpt/rewards/: __init__.py  combiners.py  rewards.py
pockliggpt/rl/: __init__.py  agent.py  losses.py  model_adapters.py  prompts.py  rewards.py  storage.py  trainer.py
pockliggpt/training/: config.py  factories.py  loaders.py
pockliggpt/utils/: jblasser_2.py  sigmoid_function.py
scripts/: reward_meeko_vina.py  reward_mgltools_vina.py  reward_vina.py  sample_selfies_ppo_pocket_cross.py  sample_selfies_ppo_pocket_sequence.py  sample_selfies_ppo_pocket_sequence_addition.py  setup_docking_vina.sh  tokenize.py  tokenize_dataset.py  train.py  train_cross.py  train_ppo.py  train_sequence.py  train_sequence_add.py
tests/: test_import.py
(+14 files in other folders)
